hphp/test/zend/good/Zend/tests/bug34358.php
<?php
class foo {
  function bar() {
    $ref = &$this;
  }
}
$x = new foo();
$x->bar();
echo "ok\n";
?>